# html2flask

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: upload-pypi.yml
html2flask/: __main__.py  config.py  exceptions.py
