[metadata]
name = html2flask
description = HTML to Jinja2 Flask Converter
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
author = cr0hn
author_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/html2flask

[options]
zip_safe = True
include_package_data = True
packages = find:
[options.entry_points]
console_scripts =
    html2flask = html2flask.__main__:main
